--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat", snas-serif;
 }
 
 p {
@@ -15,12 +15,14 @@ p {
 /* Headings */
 
 .big-heading {
-  font-family: "Montserrat-Black";
-  font-size: 3.5rem;
+  font-family: "Montserrat", sansserif;
+  font-size: 3rem;
   line-height: 1.5;
+  font-weight: 900;
 }
 
 .section-heading {
+  font-weight: 700;
   font-size: 3rem;
   line-height: 1.5;
 }
@@ -60,7 +62,8 @@ p {
 
 .nav-link {
   font-size: 1.2rem;
-  font-family: "Montserrat-Light";
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
 }
 
 /* Buttons */
@@ -84,24 +87,26 @@ p {
 /* Title Image */
 
 .title-image {
-  width: 60%;
+  width: 25%;
   transform: rotate(25deg);
   position: absolute;
-  right: 30%;
+  right: 25%;
 }
 
 /* Features Section */
 
 #features {
   position: relative;
+  z-index: 1;
 }
 
 .feature-title {
   font-size: 1.5rem;
+  font-weight: 700;
 }
 
 .feature-box {
-  padding: 4.5%;
+  padding: 5%;
 }
 
 .icon {
@@ -120,6 +125,7 @@ p {
 }
 
 .testimonial-text {
+  font-weight: 700;
   font-size: 3rem;
   line-height: 1.5;
 }
@@ -174,6 +180,7 @@ p {
   }
 
   .title-image {
+    width: 60%;
     position: static;
     transform: rotate(0);
   }
